--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,75 @@
-/*body {
-  font: 14px sans-serif;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
+body{
+    background-color: #29293d
+}
+
+.state rect {
+  fill: #000;
+}
+
+.state text {
+  font: 48px sans-serif;
+  text-anchor: middle;
+  fill: white;
+
+}
+input[type=range]{
+    -webkit-appearance: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 5px;
+    background: #ddd;
+    border: none;
+    border-radius: 3px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: none;
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    background: goldenrod;
+    margin-top: -4px;
+}
+
+input[type=range]:focus {
+    outline: none;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #ccc;
+}
+/*.state--selected rect {
+  fill: #9f4a6c;
+}
+
+.state--selected text {
+  fill: white;
+}*/
+
+
+.WA {
+  /*
+  background-image:url(http://winnerhun.uw.hu/vigyorpofa.gif);
+  background-repeat:no-repeat;
+  */
+
+  width:48px;
+  height:48px;
+
+  background: #e0ffc7 url(http://winnerhun.uw.hu/vigyorpofa.gif) no-repeat center center;
 }
 
 #main {
   width: 1200px;
   margin: 0 auto;
   text-align: center;
-}*/
+}
 
 .handle-text {
+font: 14px sans-serif;
   text-shadow: none;
   text-rendering: optimizeLegibility;
 }
@@ -46,7 +104,7 @@
 }
 
 .state-text {
-  font: 24px sans-serif;
+  font: 48px sans-serif;
   color: #c00;
   fill: #cc0;
 }
